Anti-cheat/moderation/faction-cleanup patch: xray defense, IP bans, monuments
- /tpahere added, reusing the exact /tpa request/warmup/cooldown machinery
  (a `here` flag on the pending request decides which side moves at accept
  time -- nothing else about the flow changed).
- Server-list ping now hides ALL hidden players (vanished admins included,
  not just spectator-mode) from the name sample, via the same
  isHiddenFromPublic() check used elsewhere for this exact leak -- the
  numeric online count is untouched.
- Spawn bulletin hologram relaid out: left = top 10 factions, right = top
  10 players, far right = personal stats + explicit /stats hint. Same
  3-panel TextDisplay mechanism and 30-60s refresh timer as before: no
  new per-tick cost. Click-to-GUI behavior preserved, just remapped to the
  new panel order.
- New IpBanService: resolves an offline player's IP from AuthMe's own
  database (the authoritative source) and enforces bans directly via
  AsyncPlayerPreLoginEvent. Built because PunisherX's own /banip throws an
  unexpected error on every attempt in this deployment (reproduced with
  both a player name and a literal IP -- not specific to name resolution),
  most likely tied to its unconfigured GeoIP lookup. Supports temp/perm
  bans, duration changes, unban by name or IP, and warns the banning admin
  privately when other known accounts share the resolved IP.
- New MonumentService: /ashfall monument list/locate/tp/register/remove/
  rename for admin structure & named-location bookkeeping, plus
  snapshot/restore built on WorldEdit (now installed) with a preview step
  that checks the restore region against faction claims, a pre-restore
  backup of current state, and audit logging. Structure searches use
  Bukkit's modern Structure/StructureSearchResult API (confirmed via the
  actual Paper API jar for this build, not the deprecated StructureType
  overload) and are cached in a new saved_locations table so a repeat
  /locate for the same structure ne